--- a/DarkkestP3/src/index.css
+++ b/DarkkestP3/src/index.css
@@ -6,12 +6,47 @@ html,
 body,
 #root,
 .app {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
+    margin: 0 auto;
+    padding: 0;
     @apply text-black;
+    background-image: url("https://www.cameronsworld.net/img/content/1/bg.png");
 }
 
 .hide,
 .offscreen {
     display: none;
 }
+
+.center {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20%;
+    text-align: center;
+    color: bisque;
+    border: 35px groove white;
+}
+
+.registrationForm {
+    margin: 3%;
+    padding: 10px;
+    border: 4px dashed yellow;
+}
+
+label {
+    display: inline;
+}
+  
+input {
+height: 20px;
+margin-left: 5px;
+}
+
+img {
+    display: inline;
+    border: 3px dotted green;
+}
+
