--- a/DarkkestP3/src/index.css
+++ b/DarkkestP3/src/index.css
@@ -12,8 +12,8 @@
 }
 
 html {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
-    font-family: "Patrick Hand", cursive;
+    /* font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Patrick Hand", cursive; */
     font-family: "Bad Script", cursive;
     font-size: 20px;
     color: #fff;
@@ -117,6 +117,15 @@ button {
     color: firebrick;
     font-weight: bold;
     text-align: center;
+    border-radius: 1rem;
+}
+
+.success {
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 1rem;
 }
 
 /* index.css */
@@ -124,9 +133,9 @@ button {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-  }
+}
   
-  .tabs button {
+.tabs button {
     padding: 10px 20px;
     color: white;
     cursor: pointer;
@@ -134,15 +143,15 @@ button {
     border: none;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.3s ease;
-  }
-  
-  .tabs button.active {
+}
+
+.tabs button.active {
     border-bottom: 2px solid #ffffff;
-  }
-  
-  .tab-content {
+}
+
+/* .tab-content {
     text-align: center;
-  }
+} */
   
 
 /*
