--- a/DarkkestP3/src/index.css
+++ b/DarkkestP3/src/index.css
@@ -61,6 +61,7 @@ form {
 
 input[type="text"],
 input[type="password"],
+input[type="username"],
 button,
 textarea {
     width: 90%;
@@ -132,7 +133,7 @@ button {
 .tabs {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
   
 .tabs button {
