--- a/DarkkestP3/src/index.css
+++ b/DarkkestP3/src/index.css
@@ -37,7 +37,7 @@ div {
     margin: 100px,100px,100px,100px;
 }
 
-section {
+#loginBox {
     width: 100%;
     max-width: 420px;
     min-height: 400px;
@@ -148,6 +148,68 @@ button {
 
 .tabs button.active {
     border-bottom: 2px solid #ffffff;
+}
+
+#homepage {
+    width: 100%;    
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1rem;    
+    border: .5rem outset pink;
+    box-shadow: 0 0 0 .5rem skyblue;
+    border-radius: 2%;
+}
+
+#homeheader {
+    text-align: center;
+    font-size: 60px;
+    padding: 1rem;
+}
+
+#hpaside {
+    float: left;
+    width: 25%;
+    height: 650px;
+    border: .5rem solid red;
+    text-align: center;
+    font-size: 60px;
+}
+
+#applications {
+    float: left;
+    margin-left: 2%;
+    width: 35%;
+    height: 650px;
+    border: .5rem solid red;
+    text-align: center;
+    font-size: 60px;
+}
+
+#opportunities {
+    margin-left: 64%;
+    width: 35%;
+    height: 650px;
+    border: .5rem solid red;
+    text-align: center;
+    font-size: 60px;
+}
+
+#logoutbutton {
+    width: 100%;
+    text-align: center;
+    margin: auto;
+   
+}
+
+#buttondiv {
+    position: relative;
+    width: 15%;
+    justify-content: center;
+    display: inline-block;
+    left: 30%;
+    bottom: 15px;
 }
 
 /* .tab-content {
