--- a/DarkkestP3/src/components/NavBar.css
+++ b/DarkkestP3/src/components/NavBar.css
@@ -1,10 +1,12 @@
 #navbar {
   position: absolute;
   z-index: 50;
+  background-color: rgba(11, 0, 82, 0.435);
   height: 110px;
   width: 100%;
   text-decoration: none;
   color: rgb(238, 226, 226);
   /* opacity: 0.35; */
+  font-size: larger;
   font-weight: bolder;
 }
