--- a/DarkkestP3/src/index.css
+++ b/DarkkestP3/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Roboto&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,9 +8,23 @@ html,
 body,
 #root,
 .app {
-    height: 100%;
-    width: 100%;
-    background-color: #F8F8FF;
-    font-family: 'Lato', sans-serif;
-    @apply text-black;
+  height: 100%;
+  width: 100%;
+  background-color: #f8f8ff;
+  font-family: "Lato", sans-serif;
+  @apply text-black;
+}
+
+.OppApp {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+  color: rgb(84, 18, 145);
+}
+
+#ElderPic {
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
 }
